# QuickShotMessageV2

./: README.md  v2.sln
MessageCaster/: README.md
Qnerator/: Cargo.toml
Qnerator/src/: main.rs
Qnerator/src/code_generator/: code_gen_option.rs  cpp_gen.rs  gen_prompt.rs  gen_trait.rs  mod.rs  rust_gen.rs
Qnerator/src/example/: ExampleMessage.qsmb  Hello.qsmb  Transform.qsmb
Qnerator/src/example/test_gen/: ExampleMessage.cpp  ExampleMessage.rs  Hello.cpp  Hello.rs  Transform.cpp  Transform.rs
Rust/: main.rs
Rust/qsm2/: mod.rs  qsm.rs
cpp/cpp/: CMakeLists.txt  qsm
cpp/cpp/src/: main.cpp
cpp/cpp/src/QuickShotMessage/: qsm.hpp
